fix(styles): Make placeholder edit button use same style as context menu (#3915)
Fix Bug 1428035 - Pin, Edit and Dismiss icons are not correctly centered in their buttons on Windows
Make placeholder edit button use same style as context menu so it's not too small and off-centre in windows. Design r=bryan

--- a/system-addon/content-src/components/TopSites/_TopSites.scss
+++ b/system-addon/content-src/components/TopSites/_TopSites.scss
@@ -208,6 +208,10 @@
       }
     }
 
+    .edit-button {
+      background-image: url('#{$image-path}glyph-edit-16.svg');
+    }
+
     .edit-menu {
       background: $white;
       border: $border-primary;
